# WifiVisualizer

./: .gitignore
Backend/Python/: direction.py  frame_ops.py  logging.py  ping_test.py  utils.py
Backend/Python/ESP32 Cam/: main.py  webserver.py
Backend/Python/ESP32 Main/: main.py
Backend/Python/FrameDecoder/: .gitignore  frame_stack.py  frame_types.py  logging.py  procs.py  sensores.py  state.py  tests.py  utils.py
Backend/Python/libs/: Stepper.py  mpu6050.py
Backend/Rust/: Cargo.toml  Rocket.toml  TODO
Backend/Rust/res/: config.json
Backend/Rust/src/: main.rs  tests.rs
Backend/Rust/src/controller/: api.rs  auth.rs  esp32_backend.rs  mod.rs  web.rs
Backend/Rust/src/internal/: config.rs  frame_ops.rs  frame_type.rs  logger.rs  mod.rs  procs.rs  threading_comm.rs  utils.rs
Backend/Rust/src/model/: db.rs  types.rs
Documentación/: .$DiagramaDeConexión.drawio.bkp  .$DiagramaDeVistas.drawio.bkp  DiagramaDeConexión.drawio  DiagramaDeVistas.drawio  definición_tramas.xlsx
Documentación/UML/Database/: db.puml
Documentación/UML/Procs/: EndOfTransmission.puml  FailedRequestAck.puml  Record.puml  RequestAck.puml  RequestRetransmit.puml  Reset.puml  Syn.puml
Documentación/sql/: create_db.sql  create_tables.sql  sample_inserts.sql
Frontend/public/: capture.html  home.html  login.html  nav.html  view.html
Frontend/public/css/: capture_styles.css  home_styles.css  styles.css  viewer_styles.css
Frontend/public/js/: draw-scene.js  init-buffers.js  math-helpers.js  shader.js  shape-gen.js  texture.js  util.js  webgl.js
(+8 files in other folders)
