[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial        = "0.4.0"
crc           = "3.2.1"
rocket        = { version = "0.5.0", features = ["json"] }
rocket_oauth2 = "0.5.0"
sqlx          = { version = "0.7.4", features = ["mysql", "macros", "runtime-async-std"] }
